le site est beau et il y des memes! 🤘

--- a/assets/index.html
+++ b/assets/index.html
@@ -4,19 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Les Uber Frosch</title>
+    <title>Les Über Frøsch</title>
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/index.css">
+		<!-- Ü -->
+		<!-- ü -->
+		<!-- Ø -->
+		<!-- ø -->
   </head>
   <body>
 		<nav>
 			<img src="./images/logo.webp" alt="le logo de notre magnifique site">
-			<ul>
-				<li>Acheter des trucs cool</li>
-				<li>Voir des aktus super</li>
-				<li>Se login pour modifier le site</li>
-			</ul>
+			<div>
+				<a href="./buy.html">Acheter des trucs cool</a>
+				<a href="./aktus.html">Voir des aktus super</a>
+				<a href="./login.html">Se login pour modifier le site</a>
+				<a href="./memes.html">Memes metal!</a>
+			</div>
 		</nav>
-	<!-- <script src="index.js"></script> -->
+		<main>
+			<div class="border">
+				<img src="./images/border-1.webp" alt="">
+			</div>
+			<h1>Bienvenue sur le site des Über Frøsch!</h1>
+			<div class="cat">
+				<img src="./images/heavy-meowtal.webp" alt="">
+			</div>
+		</main>
   </body>
 </html>
