fix du curseur qui s'affichait pas et logo qui ramene vers l'accueil!

--- a/assets/memes.html
+++ b/assets/memes.html
@@ -15,7 +15,9 @@
   </head>
 	<body>
 		<nav>
-			<img src="./images/logo.webp" alt="le logo de notre magnifique site">
+			<a href="./index.html">
+				<img class="logo" src="./images/logo.webp" alt="le logo de notre magnifique site">
+			</a>
 			<div>
 				<a href="./index.html">Accueil!</a>
 				<a href="./buy.html">Acheter des trucs cool</a>
