--- a/assets/index.html
+++ b/assets/index.html
@@ -15,7 +15,7 @@
   </head>
   <body>
 		<nav>
-			<img src="./images/logo.webp" alt="le logo de notre magnifique site">
+			<img class="logo" src="./images/logo.webp" alt="le logo de notre magnifique site">
 			<div>
 				<a href="./buy.html">Acheter des trucs cool</a>
 				<a href="./aktus.html">Voir des aktus super</a>
