--- a/über-frøsch/memes.html
+++ b/über-frøsch/memes.html
@@ -38,6 +38,14 @@
 				<div class="grid-img"> <img src="./images/memes/8.webp"> </div>
 				<div class="grid-img"> <img src="./images/memes/9.webp"> </div>
 				<div class="grid-img"> <img src="./images/memes/10.webp"> </div>
+				<div class="grid-img"> <img src="./images/memes/11.webp"> </div>
+				<div class="grid-img"> <img src="./images/memes/12.webp"> </div>
+				<div class="grid-img"> <img src="./images/memes/13.webp"> </div>
+				<div class="grid-img"> <img src="./images/memes/14.webp"> </div>
+				<div class="grid-img"> <img src="./images/memes/15.webp"> </div>
+				<div class="grid-img"> <img src="./images/memes/16.webp"> </div>
+				<div class="grid-img"> <img src="./images/memes/17.webp"> </div>
+				<div class="grid-img"> <img src="./images/memes/18.webp"> </div>
 			</div>
 		</body>
   </body>
