changement de bordure pour le site!

--- a/über-frøsch/index.html
+++ b/über-frøsch/index.html
@@ -25,11 +25,14 @@
 		</nav>
 		<main>
 			<div class="border">
-				<img src="./images/border-1.webp" alt="">
+				<img src="./images/border-2.webp" alt="">
 			</div>
 			<h1>Bienvenue sur le site des Über Frøsch!</h1>
 			<div class="cat">
 				<img src="./images/heavy-meowtal.webp" alt="">
+			</div>
+			<div class="border-end">
+				<img src="./images/border-2.webp" alt="">
 			</div>
 		</main>
   </body>
