ajout des reviews d'album sur le site ! :D

--- a/über-frøsch/buy.html
+++ b/über-frøsch/buy.html
@@ -20,7 +20,7 @@
 			</a>
 			<div>
 				<a href="./index.html">Accueil</a>
-				<a href="./aktus.html">Voir des aktus super</a>
+				<a href="./reviews.html">Voir des reviews super</a>
 				<a href="./login.html">Se login pour modifier le site</a>
 				<a href="./memes.html">Memes metal!</a>
 			</div>
