--- a/über-frøsch/index.html
+++ b/über-frøsch/index.html
@@ -18,7 +18,7 @@
 			<img class="logo" src="./images/logo.webp" alt="le logo de notre magnifique site">
 			<div>
 				<a href="./buy.html">Acheter des trucs cool</a>
-				<a href="./aktus.html">Voir des aktus super</a>
+				<a href="./reviews.html">Voir des reviews super</a>
 				<a href="./login.html">Se login pour modifier le site</a>
 				<a href="./memes.html">Memes metal!</a>
 			</div>
