--- a/über-frøsch/memes.html
+++ b/über-frøsch/memes.html
@@ -21,7 +21,7 @@
 			<div>
 				<a href="./index.html">Accueil!</a>
 				<a href="./buy.html">Acheter des trucs cool</a>
-				<a href="./aktus.html">Voir des aktus super</a>
+				<a href="./reviews.html">Voir des reviews super</a>
 				<a href="./login.html">Se login pour modifier le site</a>
 			</div>
 		</nav>
