un login franchement trop cool!

--- a/über-frøsch/login.html
+++ b/über-frøsch/login.html
@@ -7,12 +7,34 @@
     <title>Les Über Frøsch</title>
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/index.css">
 		<!-- Ü -->
 		<!-- ü -->
 		<!-- Ø -->
 		<!-- ø -->
   </head>
   <body>
-		<h1>coucou</h1>
+		<nav>
+			<img class="logo" src="./images/logo.webp" alt="le logo de notre magnifique site">
+			<div>
+				<a href="./buy.html">Acheter des trucs cool</a>
+				<a href="./reviews.html">Voir des reviews super</a>
+				<a href="./login.html">Se login pour modifier le site</a>
+				<a href="./memes.html">Memes metal!</a>
+			</div>
+		</nav>
+		<main>
+			<div class="border">
+				<img src="./images/border-2.webp" alt="">
+			</div>
+			<div class="form">
+				<input type="text" placeholder="Ton username metallique!" required>
+				<input type="password" placeholder="Le mot de passe trop secret" required>
+				<button type="submit">Se connecter</button>
+			</div>
+			<div class="border-end">
+				<img src="./images/border-2.webp" alt="">
+			</div>
+		</main>
   </body>
 </html>
