--- a/uber-frosch/test.html
+++ b/uber-frosch/test.html
@@ -1,4 +1,7 @@
 <!DOCTYPE html>
+<head>
+	<meta charset="utf-8">
+</head>
 
 <body>
 Bonjour. Ceci est un test. Ce test n'a pas d'objectif pour être joli. Simplement une page HTML. Rien d'autre. Pas de CSS. Pas de Javascript. L'objectif dans tout cela est de vérifier si le serveur fonctionne. Rien n'est donc à voir ici. J'aimerais bien que cette page soit jolie, mais cela serait contre-productif. En effet, elle n'est pas faite pour ça.
