uber-frosch: correction d'une erreur gravissime

--- a/uber-frosch/login.html
+++ b/uber-frosch/login.html
@@ -15,7 +15,9 @@
   </head>
   <body>
 		<nav>
-			<img class="logo" src="./images/logo.webp" alt="le logo de notre magnifique site">
+			<a href="./index.html">
+				<img class="logo" src="./images/logo.webp" alt="le logo de notre magnifique site">
+			</a>
 			<div>
 				<a href="./buy.html">Acheter des trucs cool</a>
 				<a href="./reviews.html">Voir des reviews super</a>
