Magnifique! mainenant on gere les POST!
l'utilisateur peut creer un compte puis se connecter,
une fois ca fait il a un cookie qui va me servir pour modifier le site!
Mais j'ai pas encore implementer cette partie!
c'etait bien galere de comprendre ce a quoi s'attendais javascript en
retour.
Aussi le code cpp est pas ultra beau surtout au niveau des if que je
fais dans le HTTPProtocol_response.cpp! Je vais ameliorer ca un peu plus
tard pour le rendre plus jolie!

--- a/uber-frosch/login.html
+++ b/uber-frosch/login.html
@@ -29,7 +29,7 @@
 			<div class="border">
 				<img src="./images/border-2.webp" alt="">
 			</div>
-			<form>
+			<form id="form" name="form">
 				<input
 					type="text"
 					placeholder="Ton username metallique!"
@@ -39,8 +39,8 @@
 				<input
 					type="password"
 					placeholder="Le mot de passe trop secret"
-					value="ldskajf"
-					value="password"
+					value="12345"
+					id="password"
 					required>
 				<button type="submit">Se connecter</button>
 			</form>
