--- a/uber-frosch/login.html
+++ b/uber-frosch/login.html
@@ -44,6 +44,9 @@
 					required>
 				<button type="submit">Se connecter</button>
 			</form>
+			<form id="disconnect">
+				<button type="submit">Deconnexion</button>
+			</form>
 			<div class="border-end">
 				<img src="./images/border-2.webp" alt="">
 			</div>
