--- a/uber-frosch/login.html
+++ b/uber-frosch/login.html
@@ -47,6 +47,9 @@
 			<form id="disconnect">
 				<button type="submit">Deconnexion</button>
 			</form>
+			<form id="deleter">
+				<button type="submit">Supprimer compte</button>
+			</form>
 			<div class="border-end">
 				<img src="./images/border-2.webp" alt="">
 			</div>
