Errors pages work again
im dumb

--- a/uber-frosch/login.html
+++ b/uber-frosch/login.html
@@ -42,7 +42,8 @@
 					value="12345"
 					id="password"
 					required>
-				<button type="submit">Se connecter</button>
+				<button type="submit" id="connect">Se connecter</button>
+				<button type="submit" id="connectsec">Se connecter (secure)</button>
 			</form>
 			<form id="disconnect">
 				<button type="submit">Deconnexion</button>
